# csdemo

./: .gitmodules  Cargo.toml  README.md  build.rs  profile.json
.github/workflows/: benchmark.yaml  test.yaml
benches/: example.rs
examples/: ancient-entity.rs  ancient-noentity.rs  lazy-ancient-entity.rs
src/: bitreader.rs  container.rs  democmd.rs  frame.rs  game_event.rs  lazyparser.rs  lib.rs  netmessagetypes.rs  packet.rs  parser.rs  structured.rs  values.rs  varint.rs
src/lazyparser/: entities.rs  events.rs
src/parser/: decoder.rs  entities.rs  fieldpath.rs  propcontroller.rs  sendtables.rs  variant.rs
src/parser/decoder/: quantizedfloat.rs
testfiles/: ancient_sendtables.b  de_ancient.dem  mirage.dem
tests/: lazy.rs  parse.rs
