[package]
name = "csdemo"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = "0.13.2"
prost-types = "0.13.2"

# For decompressing any compressed frames
snap = "1.1.1"

# For decoding the data stored inside of the `Packet` command
bitter = "0.7"

phf = { version = "0.11", features = ["macros"] }

[build-dependencies]
prost-build = { version = "0.13.2" }
